@@ -20,6 +20,7 @@
     "ProofGeneral\\.process_pgip"
     "ProofGeneral\\.restart"
     "ProofGeneral\\.undo"
+    "SML_file"
     "abbreviation"
     "also"
     "apply"
@@ -344,6 +345,7 @@
 (defconst isar-keywords-theory-decl
   '("ML"
     "ML_file"
+    "SML_file"
     "abbreviation"
     "attribute_setup"
     "axiomatization"
